# ShortVideoCrawl

./: .gitignore  README.md  pyproject.toml
shortvideocrawl/: scrapy.cfg
shortvideocrawl/shortvideocrawl/: items.py  middlewares.py  pipelines.py  settings.py
shortvideocrawl/shortvideocrawl/spiders/: haokan.py  ixigua.py  kuaishou.py  quanmin.py  xinpianchang.py
