[tool.poetry]
name = "shortvideocrawl"
version = "0.0.0"
description = ""
authors = ["zeohan.dxs <zeohan.dxs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]